definite fix for refresh and toast issue and implement PO changes to font stylinga nd double scrolls

--- a/src/components/create-product-page/CreateProductPage.css
+++ b/src/components/create-product-page/CreateProductPage.css
@@ -33,13 +33,13 @@ body {
 }
 
 h1 {
-    color: black;
+    color: white;
     text-align: justify;
     text-decoration: underline;
     margin-left: 1.3em;
 }
 
 .FormItem_label__3VgYr {
-    color: black;
+    color: white;
 }
 
